--- a/index.html
+++ b/index.html
@@ -162,9 +162,9 @@
 
       <div class="project-box">
         <div class="project-img">
-          <img src="Images/benefits-of-coding-e1606911064541.jpg" alt="AAT Project">
+          <img src="Images/benefits-of-coding-e1606911064541.jpg" alt="AAD Project">
         </div>
-        <h3>AAT Project</h3>
+        <h3>AAD Project</h3>
         <p>A smart accounting automation system for managing transactions, reports, and financial analytics efficiently.</p>
         <a href="#" class="btn">See More</a>
       </div>
@@ -214,10 +214,6 @@
 </footer>
 
   
-
-
-
-
 
 
 
